# 75HC-Rust

./: .gitignore  README.md
CLIGreeter/: Cargo.toml
CLIGreeter/src/: main.rs
config_reader/: .env.example  Cargo.toml  README.md  config.json  config.toml  config.yaml
config_reader/files/: config.json  config.yaml
config_reader/src/: main.rs
guess_game/src/: main.rs
logger/: Cargo.toml  log.json
logger/src/: main.rs
temp_conventer/: Cargo.toml
temp_conventer/src/: main.rs
todo_cli/src/: main.rs
word_counter/: Cargo.toml  config.toml  results.txt
word_counter/src/: main.rs
word_counter/test_files/: input.txt  test2.txt
